adicionei um novo parágrafo

--- a/saiteexemplo/index.html
+++ b/saiteexemplo/index.html
@@ -8,6 +8,8 @@
 <body>
     <p>Olá, mundo!</p>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias labore iure numquam dolores atque quae sunt laborum neque necessitatibus voluptatum. Minima explicabo asperiores quaerat eius? Ea sint dolores repellat cupiditate.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias labore iure numquam dolores atque quae sunt laborum neque necessitatibus voluptatum. Minima explicabo asperiores quaerat eius? Ea sint dolores repellat cupiditate.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem voluptates accusamus error doloremque nemo, eaque laudantium, architecto fuga repellendus commodi fugiat sequi cupiditate ipsam animi, provident aut voluptatibus vel optio.</p>
 </body>
 </html>
